--- a/locale/it_IT/locale.xml
+++ b/locale/it_IT/locale.xml
@@ -4,7 +4,8 @@
 <!--
   * locale/it_IT/locale.xml
   *
-  * Copyright (c) 2012 CILEA
+  * Copyright (c) 2003-2012 John Willinsky
+  * Contributed by CILEA
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Localization strings for the it_IT locale.
